about us section added

--- a/restaurant website/index.html
+++ b/restaurant website/index.html
@@ -29,10 +29,24 @@
     </nav>
     <section class="showcase-area" id="showcase">
         <div class="showcase-container">
-            <h1 class="main-title">EAT RIGHT FOOD</h1>
+            <h1>Hi , This is Raghav Darak</h1>
+            <h2 class="main-title">EAT RIGHT FOOD</h2>
         <p>Eat Healthy Food, it is good for your health.</p>
         <a href="#food-menu"class="btn btn-primary">Menu</a>
         </div>
         </section>
+        <section id ="about">
+            <div class="about-wrapper container">
+                <div class="about-text">
+                    <p class="small">About us</p>
+                    <h2>We have been making healthy food for last 10 years</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. A quaerat alias laudantium ipsum necessitatibus aliquid optio nihil numquam rerum. Veniam vel dolores, saepe quasi quis nesciunt officiis incidunt! Ratione quidem reiciendis similique praesentium incidunt! Eos quaerat necessitatibus nobis deserunt quasi.</p>
+                </div>
+                <div class="about-img">
+                    <img src="./images/about-photo.jpg" alt="About us">
+                </div>
+            </div>
+        </section>
+        
 </body>
 </html>
