--- a/restaurant website/index.html
+++ b/restaurant website/index.html
@@ -47,6 +47,37 @@
                 </div>
             </div>
         </section>
-        
+        <section id="food">
+            <h2>Types of Food</h2>
+            <div class="food-container container">
+                <div class="food-type fruit">
+                    <div class="img-container">
+                        <img src="./images/food_1.jpg" alt="fruit">
+                    <div class="img-content">
+                        <h3>Fruit</h3>
+                        <a href="https://en.wikipedia.org/wiki/Fruit" class="btn btn-primary" target="_blank">Learn More</a>
+                    </div>
+                    </div>
+                </div>
+                <div class="food-type vegetable">
+                    <div class="img-container">
+                        <img src="./images/food2.jpg" alt="vegetable">
+                    <div class="img-content">
+                        <h3>Vegetable</h3>
+                        <a href="https://en.wikipedia.org/wiki/Vegetable" class="btn btn-primary" target="_blank">Learn More</a>
+                    </div>
+                    </div>
+                </div>
+                <div class="food-type grain">
+                    <div class="img-container">
+                        <img src="./images/food3.jpg" alt="grain">
+                    <div class="img-content">
+                        <h3>Grains</h3>
+                        <a href="https://en.wikipedia.org/wiki/Grain" class="btn btn-primary" target="_blank">Learn More</a>
+                    </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 </body>
 </html>
